# AlphaRadar

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial.py
docs/: 2024-01-15-alpharadar-v2-design.md
docs/superpowers/plans/: 2024-01-15-sub1-foundation-plan.md  2026-07-20-alpharadar-implementation.md  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md
docs/superpowers/specs/: 2026-07-20-quantflow-design.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AddPositionForm.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  PositionRow.tsx  RecommendationBadge.tsx  StockCard.tsx
frontend/src/hooks/: use-portfolio.ts  use-recommendation.ts  use-stock.ts
frontend/src/lib/: api-client.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Portfolio.tsx  StockDetail.tsx
frontend/src/stores/: portfolio-store.ts  stock-store.ts
frontend/tests/: setup.ts
frontend/tests/e2e/: dashboard.spec.ts  portfolio.spec.ts  stock-detail.spec.ts
openspec/: config.yaml
scripts/: start.sh
src/alpharadar/: config.py
tests/infrastructure/: test_docker_compose.py
tests/integration/: test_foundation.py
tests/unit/: test_config.py
tests/worker/: test_tasks.py
(+55 files in other folders)
