[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpharadar"
version = "0.1.0"
description = "Semi-autonomous stock analysis and recommendation system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b1",
    "yfinance>=0.2.40",
    "textblob>=0.18.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.0.0",
    "factory-boy>=3.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env = [
    "DATABASE_URL=postgresql+asyncpg://test:test@localhost:5432/alpharadar_test",
    "REDIS_URL=redis://localhost:6379/1",
]
